bug fixed with form on mobile

--- a/app/wp-content/themes/dizzain-template/sass/main.scss
+++ b/app/wp-content/themes/dizzain-template/sass/main.scss
@@ -2,16 +2,20 @@
 @import "modules/vars";
 @import "partials/notifications";
 
+//global
 .hidden{
 	display: none;
 }
-
+.mfp-container{
+	left: -6px;
+}
 input.input_errorcustom {
 	border-bottom: 2px solid red;
 }
 label.input_errorcustom {
 	display: none !important;
 }
+
 //select
 .custom-select {
 	position: relative; 
@@ -48,7 +52,7 @@ label.input_errorcustom {
 }
 .select-items {
 	position: absolute;
-	background-color: none;
+	background-color: #2c40c8;
 	top: 100%;
 	left: 0;
 	right: 0;
@@ -57,7 +61,6 @@ label.input_errorcustom {
 .select-hide {
 	display: none; 
 }
-
 .select-items div:hover, .same-as-selected {
 	background-color: none; 
 }
@@ -98,6 +101,7 @@ label.input_errorcustom {
 	border: none;
 	margin-bottom: 10px;
 	color: #fff;
+	width: 100%;
 	&::placeholder{
 		color: #fff;
 		font-family: FuturaPT-Light,sans-serif;
@@ -113,6 +117,10 @@ label.input_errorcustom {
 	padding: 10px;
 	color: #fff;
 	min-height: 194px;
+	@media only screen and (max-width: 576px) {
+		margin-top: 10px;
+		min-height: auto;
+	}
 }
 .openform__imgwrap{
 	padding-top: 3%;
